# com

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/com_backend/: Cargo.toml  com_backend.did  readme.md
src/com_backend/src/: lib.rs
src/com_backend/src/dtos/: auth_dto.rs  blog_dto.rs  mod.rs  response_dto.rs  user_dto.rs
src/com_backend/src/models/: blog.rs  mod.rs  user.rs
src/com_extern/: Cargo.toml  canister.did  install_didc.sh
src/com_extern/src/: canister.rs  dtos.rs  main.rs
src/com_frontend/: package.json
src/com_frontend/src/: App.jsx
