[package]
name = "com_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.17"
candid = "0.10"
serde = { version = "1.0", features = ["derive"] }
ic-stable-structures = "0.6.8"
bincode = "1.3"
sha2 = "0.10"
hex = "0.4"
jwt = "0.16"
hmac = "0.12"