[package]
name = "com"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
ic-agent = "0.37"
candid = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tokio = { version = "1.40", features = ["full"] }
async-std = "1.13"
ic-cdk = "0.17"
env_logger = "0.11"
log = "0.4"